# test_rig_serving

./: .gitignore  Procfile  README.md  app.yaml  main.py  model_builder.py  pyproject.toml  requirements.txt  setup.py  setup.sh  try_dscan.py  try_isolator.py
anomaly_detection/: .dockerignore  .gcloudignore  Dockerfile  Procfile  app.yaml  ml_detector_build.py  nn_detector_build.py  requirements.txt  run_detector.py  serving.dockerfile
anomaly_detection/configs/: requirements.txt
anomaly_detection/src/: serving.py
anomaly_detection/utils/: config.py  plotters.py  readers.py
cloudbuild/: detection.yaml  detection_cloud_run.yaml  forecasting-gke.yaml  forecasting-rebuild-push.yaml  forecasting.yaml  forecasting_cloud_run.yaml  requirements.txt
code/notebooks/: anomaly_detection.ipynb  forecasting.ipynb
code/scripts/: anomaly_detector.py  anomaly_detector_build.py  anomaly_detector_ml_build.py  anomaly_detector_nn_build.py  anomaly_detector_tuner.py  main.py  make_db.py  step_predictor_build.py  step_predictor_builder.py  timeseries_analysis.py
foreacsting/: ml_step_predictor_build.py  timeseries_analysis.py
foreacsting/models/: xgb_vibr_1.pkl
foreacsting/utils/: config.py  plotters.py  readers.py
forecasting/: .dockerignore  .gcloudignore  .gitignore  Makefile  decomposer_build.py  deployment.yaml  ml_forecaster_build.py  nn_forecaster_build.py  requirements.txt  run_forecaster.py  serving.dockerfile  tf_forecaster_build.py
notebooks/: anomaly_detection.ipynb  forecasting.ipynb
utils/: __init__.py  anomaly.py  config.py  plotters.py  readers.py
(+101 files in other folders)
