[tool.poetry]
name = "test-rig-serving"
version = "0.1.0"
description = ""
authors = ["Ivan Okhotnikov <ivan.okhotnikov@outlook.com>"]
readme = "README.md"
packages = [{include = "test_rig_serving"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gcsfs = "^2022.10.0"
plotly = "^5.11.0"
openpyxl = "^3.0.10"
streamlit = "<1.15.0"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
